I styled home page at this stage

--- a/index.html
+++ b/index.html
@@ -1,113 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title class="home">Home</title>
-
-  <!-- the external css link goes here -->
-   <link rel="stylesheet" href="./styles/index.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ASOS Home - Discover Your Next Look!</title> <link rel="stylesheet" href="./styles/index.css">
 
 </head>
 <body>
-<!-- link to other related web pages go here. -->
- <a class="link" href="index.html">home</a>
- <a class="link" href="about.html">about</a>
- <a class="link" href="contact.html">contact</a>
- <a class="link" href="gallery.html">gallery</a>
 
- <h1>Welcom to ASOS</h1>
+    <header>
+        <nav class="main-nav"> <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="gallery.html">Gallery</a>
+        </nav>
+    </header>
 
- <h2>Discover your next favorite Look!</h2>
+    <main>
+        <h1>Welcome to ASOS</h1>
+        <h2>Discover your next favorite Look!</h2>
 
- <!-- the shop AD video goes here. -->
+        <div class="video-container">
+            <video autoplay loop muted poster="images/fr1.jpg" controls>
+                <source src="videos/bc1-VEED (2).mp4" type="video/mp4">
+                <track kind="captions" src="captions_en.vtt" srclang="en" label="English Captions" default>
+                Your browser does not support the video tag.
+            </video>
+        </div>
 
- <video width="1390" height="720" autoplay loop muted poster="fr1.jpg" controls>
+        <h1>Please have a look for your favorite collections!</h1>
 
-  <source class="video" src="c:\Users\TOSHIBA\Downloads\bc1-VEED (2).mp4" type="video/mp4">
-      <track kind="captions" src="captions_en.vtt" srclang="en" label="English Captions" default>
-  
- </video>
- <h1>please have a look for your favorite collections!</h1>
-<br>
- <!-- some random images go here. -->
+        <div class="image-gallery"> <img src="images/sh6.png" alt="ASOS Women's Collections" loading="lazy">
+            <img src="images/sh7.png" alt="ASOS Men's Collections" loading="lazy">
+            <img src="images/sh8.png" alt="Side view of our shop's interior" loading="lazy">
+            <img src="images/sh5.png" alt="Side view of ASOS webpage interface" loading="lazy">
+            <img src="images/sh7.png" alt="Different collections in our shop 1" loading="lazy">
+            <img src="images/sh8.png" alt="Different collections in our shop 2" loading="lazy">
+            <img src="images/sh9.png" alt="Different collections in our shop 3" loading="lazy">
+            <img src="images/sh10.png" alt="Different collections in our shop 4" loading="lazy">
+            <img src="images/sh11.png" alt="Different collections in our shop 5" loading="lazy">
+        </div>
 
-  <img class="image_one" src="C:\NEXES_2025\What I love-CSS PROJECT\images\sh6.png" alt="women collections" height="350px" width="600px" title="OUR SHOP ENTRANCE"
-   loading="lazy" sizes="(max-width: 700x) 480x, (max-width: 1200x) 800x, 1200x "
-   srcset="sh6.png 320px, sh6.png 480px, sh6.png 768px, sh6.png 1920px, sh6.png 1080px"
-   >
- 
-   <img class="image_2"  src="C:\NEXES_2025\What I love-CSS PROJECT\images\sh7.png" alt="Men collections" height="350px" width="700px" title=""
-   
-   >
-  
-   <img class="image_4"  src="C:\NEXES_2025\What I love-CSS PROJECT\images\sh8.png" alt="side view of our shop" height="350px" width="600px" title=""
-   >
-  
-   <img  class="image" src="C:\NEXES_2025\What I love-CSS PROJECT\images\sh5.png" alt="side view of our page" height="350px" width="700px" title="">
-  <br>
-  <img class="image" 
-  src="C:\NEXES_2025\What I love-CSS PROJECT\images\sh7.png" alt="different collections in our shop.1" height="350px" width="650px" title="">
-<img class="image" 
-src="C:\NEXES_2025\What I love-CSS PROJECT\images\sh8.png" alt="different collections in our shop.2" height="350px" width="650px" title="">
-<img class="image"
- src="C:\NEXES_2025\What I love-CSS PROJECT\images\sh9.png" alt="different collections in our shop.3" height="350px" width="650px" title="">
-<img class="image" 
-src="C:\NEXES_2025\What I love-CSS PROJECT\images\sh10.png" alt="different collections in our shop.4" height="350px" width="650px" title="">
-<img class="image" 
-src="C:\NEXES_2025\What I love-CSS PROJECT\images\sh11.png" alt="different collections in our shop.5" height="350px" width="650px" title="">
+        <h2>Our newly arrived products</h2>
+        <div class="new-arrivals-gallery">
+            <img src="images/sh12.png" alt="New fashion collection 1" loading="lazy">
+            <img src="images/sh13.png" alt="New fashion collection 2" loading="lazy">
+            <img src="images/sh14.png" alt="New fashion collection 3" loading="lazy">
+        </div>
 
-<h2>our newly arrived products</h2>
-<img class="picture" src="C:\NEXES_2025\What I love-CSS PROJECT\images\sh12.png" alt="different collections in our shop.6" height="350px" width="650px" title="">
-<br>
-<img class="picture" src="C:\NEXES_2025\What I love-CSS PROJECT\images\sh13.png" alt="different collections in our shop.7" height="350px" width="650px" title="">
-<br>
-<img class="picture" src="C:\NEXES_2025\What I love-CSS PROJECT\images\sh14.png" alt="different collections in our shop.8" height="350px" width="650px" title="">
-<h3>For Trendy & Fresh Fashon</h3>
-<img class="picture" src="C:\NEXES_2025\What I love-CSS PROJECT\images\log1.png" alt="different collections in our shop.9" height="350px" width="650px" title="">
-<br>
-<br>
+        <h3>For Trendy & Fresh Fashion</h3>
+        <img class="logo-image" src="images/log1.png" alt="ASOS logo"> <div class="action-buttons">
+            <a href="contact.html" class="button-style">SHOP NOW</a>
+            <a href="about.html" class="button-style">Have a look for the latest collection</a>
+            <a href="gallery.html" class="button-style">Move into gallery</a>
+        </div>
 
-<!-- buttons go here. -->
-<button  type="button"><a href="contact.html" class="button">SHOP NOW</a></button>
-<button  type="button"><a href="about.html" class="button">Have a look for the latest collection</a></button>
-<button  type="button" ><a href="gallery.html" class="button">move into gallary </a></button>
- 
- 
-<br>
-<br>
-<!-- my footer goes here -->
- <footer>
-  <p>
-    &copy; 2025 My Awesome Website. All rights reserved.
-  </p>
- </footer>
-      <footer>
-        <p><a href="martategegne2015@gmail.com">email address</a></p>
-      </footer>
-            <footer>
-              <p><a href="/privacy">privacy policy</a></p>
-            </footer>
-            
-                     <footer>
-                              <address> Location: <br>
-                                Addis Ababa 4kilo
-                              </address>
-                            </footer>
-                            <br>
-                            <footer>
-                      <nav>
-                        
-                          <li>
-                          <a class="link" href="index.html">home</a>
-                          <a class="link" href="about.html">about</a>
-                          <a class="link" href="contact.html">contact</a>
-                          <a class="link" href="gallery.html">gallery</a>
-                        </li>
-                      </nav>
-                    </footer>
-                    <br>
+    </main>
 
+    <footer>
+        <p>
+            &copy; 2025 My Awesome Website. All rights reserved.
+        </p>
+        <p><a href="mailto:martategegne2015@gmail.com">Email Us</a></p>
+        <p><a href="/privacy">Privacy Policy</a></p>
+        <address>
+            Location: <br>
+            Addis Ababa 4 Kilo
+        </address>
+        <nav class="footer-nav"> <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+            </ul>
+        </nav>
+    </footer>
 
 </body>
 </html>
