--- a/gallery.html
+++ b/gallery.html
@@ -1,92 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>gallery</title>
-
-
-  <!-- external css link goes here. -->
-<link rel="stylesheet" href="./styles/gallery.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ASOS Gallery - See it. Love it. Shop it.</title> <link rel="stylesheet" href="./styles/gallery.css">
 
 </head>
 <body>
-  <!-- link to other related web pages go here. -->
- <a href="index.html">home</a>
- <a href="about.html">about</a>
- <a href="contact.html">contact</a>
- <a href="gallery.html">gallery</a>
- <h1>see it. love it. shop it.</h1>
- <h2>Explore our collection through images</h2>
+    <header>
+        <nav class="main-nav"> <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="gallery.html">Gallery</a>
+        </nav>
+    </header>
 
- <!-- some random images go here. -->
+    <main> <h1>See it. Love it. Shop it.</h1>
+        <h2>Explore our collection through images</h2>
 
-  <img src="C:\NEXES_2025\What I love-CSS PROJECT\images\sh6.png" alt="women collections">
-  <img src="C:\NEXES_2025\What I love-CSS PROJECT\images\sh7.png" alt="Men collections">
-  <img src="C:\NEXES_2025\What I love-CSS PROJECT\images\sh8.png" alt="side view of our shop">
-  <img src="C:\NEXES_2025\What I love-CSS PROJECT\images\sh5.png" alt="side view of our page">
-  <br>
-  <img src="C:\NEXES_2025\What I love-CSS PROJECT\images\sh7.png" alt="">
-<img src="C:\NEXES_2025\What I love-CSS PROJECT\images\sh7.png" alt="">
-<img src="C:\NEXES_2025\What I love-CSS PROJECT\images\sh7.png" alt="">
-<img src="C:\NEXES_2025\What I love-CSS PROJECT\images\sh7.png" alt="">
-<img src="C:\NEXES_2025\What I love-CSS PROJECT\images\sh7.png" alt="">
-<!-- our new collections go here -->
-<h2>our newly arrived products</h2>
-<br><br>
-<img src="C:\NEXES_2025\What I love-CSS PROJECT\images\c1.jpg" 
-alt=" new collection1" width="350px" height="650px 
+        <div class="image-grid"> <img class="gallery-img" src="images/sh6.png" alt="ASOS Women's Collections">
+            <img class="gallery-img" src="images/sh7.png" alt="ASOS Men's Collections">
+            <img class="gallery-img" src="images/sh8.png" alt="Side view of our shop's interior">
+            <img class="gallery-img" src="images/sh5.png" alt="Side view of ASOS webpage interface">
+            <img class="gallery-img" src="images/sh7.png" alt="Different collections in our shop 1">
+            <img class="gallery-img" src="images/sh7.png" alt="Different collections in our shop 2">
+            <img class="gallery-img" src="images/sh7.png" alt="Different collections in our shop 3">
+            <img class="gallery-img" src="images/sh7.png" alt="Different collections in our shop 4">
+            <img class="gallery-img" src="images/sh7.png" alt="Different collections in our shop 5">
+        </div>
 
-">
-<img src="C:\NEXES_2025\What I love-CSS PROJECT\images\c2.jpg" 
-alt=" new collection2" width="350px" height="650px">
-<img src="C:\NEXES_2025\What I love-CSS PROJECT\images\c3.jpg" 
-alt=" new collection3"  width="350px" height="650px">
-<img src="C:\NEXES_2025\What I love-CSS PROJECT\images\c4.jpg" 
-alt=" new collection4"  width="350px" height="650px">
-<img src="C:\NEXES_2025\What I love-CSS PROJECT\images\c5.jpg" 
-alt=" new collection5"  width="350px" height="650px">
-<img src="C:\NEXES_2025\What I love-CSS PROJECT\images\c3.jpg" 
-alt=" new collection3"  width="350px" height="650px">
-<img src="C:\NEXES_2025\What I love-CSS PROJECT\images\c6.jpg" 
-alt=" new collection6"  width="350px" height="650px">
-<img src="C:\NEXES_2025\What I love-CSS PROJECT\images\c7.jpg" 
-alt=" new collection7"  width="350px" height="650px">
-<img src="C:\NEXES_2025\What I love-CSS PROJECT\images\c8.jpg" 
-alt=" new collection8"  width="350px" height="650px">
-<br>
- 
- <footer>
-  <p>
-    &copy; 2025 My Awesome Website. All rights reserved.
-  </p>
- </footer>
-      <footer>
-        <p><a href="martategegne2015@gmail.com">email address</a></p>
-      </footer>
-            <footer>
-              <p><a href="/privacy">privacy policy</a></p>
-            </footer>
-            
-                     <footer>
-                              <address> Location: <br>
-                                Addis Ababa 4kilo
-                              </address>
-                            </footer>
-                            <br>
-                            <footer>
-                      <nav>
-                        
-                          <li>
-                          <a href="index.html">home</a>
-                          <a href="about.html">about</a>
-                          <a href="contact.html">contact</a>
-                          <a href="gallery.html">gallery</a>
-                        </li>
-                      </nav>
-                    </footer>
-                    <br>
+        <h2>Our Newly Arrived Products</h2>
 
-  
+        <div class="new-arrivals-grid image-grid"> <img class="gallery-img" src="images/c1.jpg" alt="New collection: Elegant dress">
+            <img class="gallery-img" src="images/c2.jpg" alt="New collection: Casual outfit">
+            <img class="gallery-img" src="images/c3.jpg" alt="New collection: Streetwear style">
+            <img class="gallery-img" src="images/c4.jpg" alt="New collection: Formal wear">
+            <img class="gallery-img" src="images/c5.jpg" alt="New collection: Accessories showcase">
+            <img class="gallery-img" src="images/c3.jpg" alt="New collection: Another streetwear view">
+            <img class="gallery-img" src="images/c6.jpg" alt="New collection: Summer apparel">
+            <img class="gallery-img" src="images/c7.jpg" alt="New collection: Winter fashion">
+            <img class="gallery-img" src="images/c8.jpg" alt="New collection: Unique design">
+        </div>
+
+    </main>
+
+    <footer>
+        <p>
+            &copy; 2025 My Awesome Website. All rights reserved.
+        </p>
+        <p><a href="mailto:martategegne2015@gmail.com">Email Us</a></p>
+        <p><a href="/privacy">Privacy Policy</a></p>
+        <address>
+            Location: <br>
+            Addis Ababa 4 Kilo
+        </address>
+        <nav class="footer-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+            </ul>
+        </nav>
+    </footer>
+
 </body>
 </html>
